--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
 <body>
 
     <header>
-        <h1>Rosa Linda</h1>
-        <img src="🌹" alt="Logo de Rosa Linda" style="width: 50px; height: 50px;">
+        <h1>🌹Rosa Linda</h1>
     </header>
 
     <nav>
