--- a/index.html
+++ b/index.html
@@ -48,9 +48,7 @@
     </header>
 
     <nav>
-        <a href="#">Mi Cuenta</a>
-        <a href="#">Tiendas</a>
-        <a href="#">Catálogo</a>
+        <a href="wa.me/573203826025">WhatsApp</a>
     </nav>
 
     <main>
