--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </header>
 
     <nav>
-        <a href="wa.me/573203826025">WhatsApp</a>
+        <a href="https://wa.me/573203826025">WhatsApp</a>
     </nav>
 
     <main>
