--- a/index.html
+++ b/index.html
@@ -52,7 +52,10 @@
     </nav>
 
     <main>
-        <p>Página web de Rosa Linda en proceso.</p>
+        <p>En nombre de Rosa Linda, queremos expresar nuestro más sincero agradecimiento. Su apoyo continuo y confianza en nuestros productos nos inspira a seguir ofreciendo lo mejor. ¡Gracias por ser parte de la familia Rosa Linda!
+
+Atentamente,
+Rosa Linda y el equipo</p>
     </main>
 
     <footer>
