--- a/index.html
+++ b/index.html
@@ -52,9 +52,19 @@
     </nav>
 
     <main>
-        <p>En nombre de Rosa Linda, queremos expresar nuestro más sincero agradecimiento. Su apoyo continuo y confianza en nuestros productos nos inspira a seguir ofreciendo lo mejor. ¡Gracias por ser parte de la familia Rosa Linda!
+        <p>Estimados y apreciados clientes, <br>
 
-Atentamente,
+Queremos dedicar este mensaje a expresar nuestra profunda gratitud en nombre de Rosa Linda. Vuestra lealtad y preferencia han sido el cimiento de nuestro crecimiento y éxito, y queremos agradecer sinceramente por cada compra, por cada interacción y por formar parte esencial de nuestra comunidad.
+
+Desde el corazón de nuestro equipo, queremos reconocer y valorar la confianza que depositan en nosotros. Cada producto que eligen de Rosa Linda es un voto de confianza, y nos llena de orgullo ser parte de sus vidas.
+
+Sabemos que tienen muchas opciones, y el hecho de que elijan nuestros productos nos impulsa a esforzarnos continuamente para ofrecer la mejor calidad y servicio posible. Nos comprometemos a seguir innovando y mejorando para satisfacer sus expectativas.
+
+Agradecemos la oportunidad de ser parte de su día a día y de contribuir, de alguna manera, a su felicidad. Estamos emocionados por lo que el futuro nos depara y esperamos seguir siendo su elección preferida.
+
+Gracias nuevamente por confiar en Rosa Linda. ¡Su apoyo significa el mundo para nosotros!
+
+Con aprecio,
 Rosa Linda y el equipo</p>
     </main>
 
