--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ Agradecemos la oportunidad de ser parte de su día a día y de contribuir, de al
 
 Gracias nuevamente por confiar en Rosa Linda. ¡Su apoyo significa el mundo para nosotros!
 
-Con aprecio,
+<br>Con aprecio,
 Rosa Linda y el equipo</p>
     </main>
 
