--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </nav>
 
     <main>
-        <p>Estimados y apreciados clientes, <br>
+        <p><p>Estimados y apreciados clientes, <br>
 
 Queremos dedicar este mensaje a expresar nuestra profunda gratitud en nombre de Rosa Linda. Vuestra lealtad y preferencia han sido el cimiento de nuestro crecimiento y éxito, y queremos agradecer sinceramente por cada compra, por cada interacción y por formar parte esencial de nuestra comunidad.
 
@@ -64,7 +64,7 @@ Agradecemos la oportunidad de ser parte de su día a día y de contribuir, de al
 
 Gracias nuevamente por confiar en Rosa Linda. ¡Su apoyo significa el mundo para nosotros!
 
-<br>Con aprecio,
+<br><p>Con aprecio,
 Rosa Linda y el equipo</p>
     </main>
 
