--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rosa Linda</title>
+    <title>Tienda Rosa Linda</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -44,7 +44,7 @@
 <body>
 
     <header>
-        <h1>🌹Rosa Linda</h1>
+        <h1>🌹 Tienda Rosa Linda</h1>
     </header>
 
     <nav>
