--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rosa Linda</title>
+    <title>Tienda Rosa Linda</title>
     <!-- external links -->
     <link rel="icon" href="assets/images/logo.ico" />
     <link rel="stylesheet" href="code/styles/normalize.css" />
@@ -19,7 +19,7 @@
             alt="Rosa Linda"
             class="header__logo"
           />
-          <h1 class="header__name">Rosa Linda</h1>
+          <h1 class="header__name">Tienda Rosa Linda</h1>
         </div>
         <div class="header__nav-center"></div>
         <div class="header__nav-right">
