--- a/index.html
+++ b/index.html
@@ -148,11 +148,11 @@
         <div class="footer__lists">
           <h6 class="footer__list-title">Contacto</h6>
           <ul class="footer__list-of-elements">
-            <li class="footer__list-item"><a href="">Facebook</a></li>
+            <li class="footer__list-item"><a href="https://www.facebook.com/profile.php?id=100066625309972">Facebook</a></li>
             <li class="footer__list-item"><a href="">Messeger</a></li>
-            <li class="footer__list-item"><a href="">Instagram</a></li>
-            <li class="footer__list-item"><a href="">WhatsApp</a></li>
-            <li class="footer__list-item"><a href="">Correo</a></li>
+            <li class="footer__list-item"><a href="https://instagram.com/tiendarosalinda?igshid=OGQ5ZDc2ODk2ZA==">Instagram</a></li>
+            <li class="footer__list-item"><a href="https://wa.me/573332417855">WhatsApp</a></li>
+            <li class="footer__list-item"><a href="tiendarosalindaempresa@gmail.com">Correo</a></li>
           </ul>
         </div>
         <div class="footer__newsletter">
@@ -182,7 +182,7 @@
         <p class="footer__name">Rosa Linda &copy; 2024</p>
       </div>
     </footer>
-    <a href="https://web.whatsapp.com/send/?phone=573203826025&text&type=phone_number&app_absent=0" class="floating-button">
+    <a href="https://wa.me/573332417855" class="floating-button">
       <svg
         xmlns="http://www.w3.org/2000/svg"
         viewBox="0 0 48 48"
