--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             alt="Rosa Linda"
             class="header__logo"
           />
-          <h1 class="header__name">Tienda Rosa Linda</h1>
+          <h1 class="header__name">Rosa Linda</h1>
         </div>
         <div class="header__nav-center"></div>
         <div class="header__nav-right">
