--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tienda Rosa Linda</title>
-        <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       rel="stylesheet"
@@ -154,11 +154,24 @@
         <div class="footer__lists">
           <h6 class="footer__list-title">Contacto</h6>
           <ul class="footer__list-of-elements">
-            <li class="footer__list-item"><a href="https://www.facebook.com/profile.php?id=100066625309972">Facebook</a></li>
+            <li class="footer__list-item">
+              <a href="https://www.facebook.com/profile.php?id=100066625309972"
+                >Facebook</a
+              >
+            </li>
             <li class="footer__list-item"><a href="">Messeger</a></li>
-            <li class="footer__list-item"><a href="https://instagram.com/tiendarosalinda?igshid=OGQ5ZDc2ODk2ZA==">Instagram</a></li>
-            <li class="footer__list-item"><a href="https://wa.me/573332417855">WhatsApp</a></li>
-            <li class="footer__list-item"><a href="tiendarosalindaempresa@gmail.com">Correo</a></li>
+            <li class="footer__list-item">
+              <a
+                href="https://instagram.com/tiendarosalinda?igshid=OGQ5ZDc2ODk2ZA=="
+                >Instagram</a
+              >
+            </li>
+            <li class="footer__list-item">
+              <a href="https://wa.me/573332417855">WhatsApp</a>
+            </li>
+            <li class="footer__list-item">
+              <a href="tiendarosalindaempresa@gmail.com">Correo</a>
+            </li>
           </ul>
         </div>
         <div class="footer__newsletter">
