--- a/facebook.html
+++ b/facebook.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Facebook Tienda Rosa Linda</title>
+    <title>Tienda Rosa Linda</title>
   </head>
   <body>
     <script>
