--- a/index.html
+++ b/index.html
@@ -69,75 +69,225 @@
       </nav>
     </header>
     <main class="main">
-      <p class="p1">
-        Rosa Linda es una empresa líder en el diseño, fabricación y venta de
-        prendas de vestir exclusivas para mujeres y niñas. Nos especializamos en
-        ofrecer una amplia gama de opciones elegantes y de alta calidad, que van
-        desde blusas y vestidos hasta pantalones y conjuntos, con un enfoque
-        particular en la moda femenina. Comprometidos con la excelencia,
-        combinamos la artesanía meticulosa con las últimas tendencias para
-        ofrecer a nuestras clientes un estilo distintivo y atemporal.
-      </p>
-
-      <h2>Misión:</h2>
-
-      <p>
-        En Rosa Linda, nuestra misión es empoderar a mujeres y niñas a través de
-        la moda, proporcionando prendas de vestir que no solo reflejen su estilo
-        individual, sino que también les brinden confianza y comodidad. Nos
-        esforzamos por superar las expectativas de nuestros clientes, ofreciendo
-        productos de calidad excepcional y un servicio personalizado, impulsados
-        por la pasión por la moda y el compromiso con la satisfacción del
-        cliente.
-      </p>
-
-      <h2>Visión:</h2>
-
-      <p>
-        Aspiramos a ser reconocidos como la marca líder en moda femenina,
-        distinguida por su innovación, calidad y compromiso con la satisfacción
-        del cliente. Buscamos expandir nuestra presencia global, manteniendo al
-        mismo tiempo la autenticidad y la atención al detalle que nos
-        caracterizan. Rosa Linda se esfuerza por ser un referente en la
-        industria de la moda, marcando pautas y siendo un modelo de
-        sostenibilidad y responsabilidad social.
-      </p>
-
-      <h2>Productos:</h2>
-
-      <p>
-        Rosa Linda se especializa en la fabricación de prendas de vestir para
-        mujeres y niñas. Para mujeres, ofrecemos una amplia variedad que incluye
-        blusas elegantes, vestidos sofisticados, pantalones de moda y conjuntos
-        coordinados que se adaptan a diversas ocasiones y estilos. Para niñas,
-        nos enfocamos en ofrecer blusas adorables que reflejen la frescura y la
-        inocencia de la infancia. Nuestros productos son cuidadosamente
-        diseñados y confeccionados para garantizar la máxima calidad y
-        durabilidad.
-      </p>
-
-      <h2>Redes Sociales:</h2>
-
-      <p>
-        Con el objetivo de mantener una conexión directa y cercana con nuestros
-        clientes, Rosa Linda está presente en diversas plataformas de redes
-        sociales. Puedes encontrarnos y seguirnos en Facebook e Instagram para
-        descubrir las últimas tendencias, colecciones exclusivas y participar en
-        emocionantes eventos y promociones. Además, ofrecemos un servicio
-        personalizado a través de WhatsApp, donde nuestro equipo de atención al
-        cliente está disponible para ayudarte en todo momento.
-      </p>
-
-      <h2>Compromiso Social y Ambiental:</h2>
-
-      <p>
-        En Rosa Linda, reconocemos la importancia de la responsabilidad social y
-        ambiental. Nos esforzamos por operar de manera sostenible, utilizando
-        prácticas éticas en toda nuestra cadena de suministro y promoviendo
-        condiciones laborales justas. Contribuimos activamente a iniciativas
-        comunitarias y causas benéficas, demostrando nuestro compromiso con el
-        bienestar social y ambiental.
-      </p>
+      <div class="container">
+        <div class="product">
+          <img src="assets/photos/photo.jpeg" alt="Ref 000">
+          <div class="product-info">
+            <h3>BLUSA DE DAMA</h3>
+            <p>Ref 000</p>
+            <p>Precio $00.000</p>
+            <button >Ir a WhatsApp</button>
+          </div>
+        </div>
+        <div class="container">
+          <div class="product">
+            <img src="assets/photos/photo.jpeg" alt="Ref 000">
+            <div class="product-info">
+              <h3>BLUSA DE DAMA</h3>
+              <p>Ref 000</p>
+              <p>Precio $00.000</p>
+              <button >Ir a WhatsApp</button>
+            </div>
+          </div>
+          <div class="container">
+            <div class="product">
+              <img src="assets/photos/photo.jpeg" alt="Ref 000">
+              <div class="product-info">
+                <h3>BLUSA DE DAMA</h3>
+                <p>Ref 000</p>
+                <p>Precio $00.000</p>
+                <button >Ir a WhatsApp</button>
+              </div>
+            </div>
+            <div class="container">
+              <div class="product">
+                <img src="assets/photos/photo.jpeg" alt="Ref 000">
+                <div class="product-info">
+                  <h3>BLUSA DE DAMA</h3>
+                  <p>Ref 000</p>
+                  <p>Precio $00.000</p>
+                  <button >Ir a WhatsApp</button>
+                </div>
+              </div>
+              <div class="container">
+                <div class="product">
+                  <img src="assets/photos/photo.jpeg" alt="Ref 000">
+                  <div class="product-info">
+                    <h3>BLUSA DE DAMA</h3>
+                    <p>Ref 000</p>
+                    <p>Precio $00.000</p>
+                    <button >Ir a WhatsApp</button>
+                  </div>
+                </div>
+                <div class="container">
+                  <div class="product">
+                    <img src="assets/photos/photo.jpeg" alt="Ref 000">
+                    <div class="product-info">
+                      <h3>BLUSA DE DAMA</h3>
+                      <p>Ref 000</p>
+                      <p>Precio $00.000</p>
+                      <button >Ir a WhatsApp</button>
+                    </div>
+                  </div>
+                  <div class="container">
+                    <div class="product">
+                      <img src="assets/photos/photo.jpeg" alt="Ref 000">
+                      <div class="product-info">
+                        <h3>BLUSA DE DAMA</h3>
+                        <p>Ref 000</p>
+                        <p>Precio $00.000</p>
+                        <button >Ir a WhatsApp</button>
+                      </div>
+                    </div>
+                    <div class="container">
+                      <div class="product">
+                        <img src="assets/photos/photo.jpeg" alt="Ref 000">
+                        <div class="product-info">
+                          <h3>BLUSA DE DAMA</h3>
+                          <p>Ref 000</p>
+                          <p>Precio $00.000</p>
+                          <button >Ir a WhatsApp</button>
+                        </div>
+                      </div>
+                      <div class="container">
+                        <div class="product">
+                          <img src="assets/photos/photo.jpeg" alt="Ref 000">
+                          <div class="product-info">
+                            <h3>BLUSA DE DAMA</h3>
+                            <p>Ref 000</p>
+                            <p>Precio $00.000</p>
+                            <button >Ir a WhatsApp</button>
+                          </div>
+                        </div>
+                        <div class="container">
+                          <div class="product">
+                            <img src="assets/photos/photo.jpeg" alt="Ref 000">
+                            <div class="product-info">
+                              <h3>BLUSA DE DAMA</h3>
+                              <p>Ref 000</p>
+                              <p>Precio $00.000</p>
+                              <button >Ir a WhatsApp</button>
+                            </div>
+                          </div>
+                          <div class="container">
+                            <div class="product">
+                              <img src="assets/photos/photo.jpeg" alt="Ref 000">
+                              <div class="product-info">
+                                <h3>BLUSA DE DAMA</h3>
+                                <p>Ref 000</p>
+                                <p>Precio $00.000</p>
+                                <button >Ir a WhatsApp</button>
+                              </div>
+                            </div>
+                            <div class="container">
+                              <div class="product">
+                                <img src="assets/photos/photo.jpeg" alt="Ref 000">
+                                <div class="product-info">
+                                  <h3>BLUSA DE DAMA</h3>
+                                  <p>Ref 000</p>
+                                  <p>Precio $00.000</p>
+                                  <button >Ir a WhatsApp</button>
+                                </div>
+                              </div>
+                              <div class="container">
+                                <div class="product">
+                                  <img src="assets/photos/photo.jpeg" alt="Ref 000">
+                                  <div class="product-info">
+                                    <h3>BLUSA DE DAMA</h3>
+                                    <p>Ref 000</p>
+                                    <p>Precio $00.000</p>
+                                    <button >Ir a WhatsApp</button>
+                                  </div>
+                                </div>
+                                <div class="container">
+                                  <div class="product">
+                                    <img src="assets/photos/photo.jpeg" alt="Ref 000">
+                                    <div class="product-info">
+                                      <h3>BLUSA DE DAMA</h3>
+                                      <p>Ref 000</p>
+                                      <p>Precio $00.000</p>
+                                      <button >Ir a WhatsApp</button>
+                                    </div>
+                                  </div>
+                                  <div class="container">
+                                    <div class="product">
+                                      <img src="assets/photos/photo.jpeg" alt="Ref 000">
+                                      <div class="product-info">
+                                        <h3>BLUSA DE DAMA</h3>
+                                        <p>Ref 000</p>
+                                        <p>Precio $00.000</p>
+                                        <button >Ir a WhatsApp</button>
+                                      </div>
+                                    </div>      <div class="container">
+                                      <div class="product">
+                                        <img src="assets/photos/photo.jpeg" alt="Ref 000">
+                                        <div class="product-info">
+                                          <h3>BLUSA DE DAMA</h3>
+                                          <p>Ref 000</p>
+                                          <p>Precio $00.000</p>
+                                          <button >Ir a WhatsApp</button>
+                                        </div>
+                                      </div>
+                                      <div class="container">
+                                        <div class="product">
+                                          <img src="assets/photos/photo.jpeg" alt="Ref 000">
+                                          <div class="product-info">
+                                            <h3>BLUSA DE DAMA</h3>
+                                            <p>Ref 000</p>
+                                            <p>Precio $00.000</p>
+                                            <button >Ir a WhatsApp</button>
+                                          </div>
+                                        </div>
+                                        <div class="container">
+                                          <div class="product">
+                                            <img src="assets/photos/photo.jpeg" alt="Ref 000">
+                                            <div class="product-info">
+                                              <h3>BLUSA DE DAMA</h3>
+                                              <p>Ref 000</p>
+                                              <p>Precio $00.000</p>
+                                              <button >Ir a WhatsApp</button>
+                                            </div>
+                                          </div>
+                                          <div class="container">
+                                            <div class="product">
+                                              <img src="assets/photos/photo.jpeg" alt="Ref 000">
+                                              <div class="product-info">
+                                                <h3>BLUSA DE DAMA</h3>
+                                                <p>Ref 000</p>
+                                                <p>Precio $00.000</p>
+                                                <button >Ir a WhatsApp</button>
+                                              </div>
+                                            </div>
+                                            <div class="container">
+                                              <div class="product">
+                                                <img src="assets/photos/photo.jpeg" alt="Ref 000">
+                                                <div class="product-info">
+                                                  <h3>BLUSA DE DAMA</h3>
+                                                  <p>Ref 000</p>
+                                                  <p>Precio $00.000</p>
+                                                  <button >Ir a WhatsApp</button>
+                                                </div>
+                                              </div>
+                                              <div class="container">
+                                                <div class="product">
+                                                  <img src="assets/photos/photo.jpeg" alt="Ref 000">
+                                                  <div class="product-info">
+                                                    <h3>BLUSA DE DAMA</h3>
+                                                    <p>Ref 000</p>
+                                                    <p>Precio $00.000</p>
+                                                    <button >Ir a WhatsApp</button>
+                                                  </div>
+                                                </div>
+                                                <div class="container">
+                                                  <div class="product">
+                                                    <img src="assets/photos/photo.jpeg" alt="Ref 000">
+                                                    <div class="product-info">
+                                                      <h3>BLUSA DE DAMA</h3>
+                                                      <p>Ref 000</p>
+                                                      <p>Precio $00.000</p>
+                                                      <button >Ir a WhatsApp</button>
+                                                    </div>
+                                                  </div>
     </main>
     <footer class="footer">
       <div class="footer__top">
