--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tienda Rosa Linda</title>
+    <title>Rosa Linda</title>
     <!-- external links -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -33,41 +33,14 @@
         </div>
         <div class="header__nav-center"></div>
         <div class="header__nav-right">
-          <button class="header__button">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              height="24"
-              viewBox="0 -960 960 960"
-              width="24"
-            >
-              <path
-                d="M240-80q-33 0-56.5-23.5T160-160v-480q0-33 23.5-56.5T240-720h80q0-66 47-113t113-47q66 0 113 47t47 113h80q33 0 56.5 23.5T800-640v480q0 33-23.5 56.5T720-80H240Zm0-80h480v-480h-80v80q0 17-11.5 28.5T600-520q-17 0-28.5-11.5T560-560v-80H400v80q0 17-11.5 28.5T360-520q-17 0-28.5-11.5T320-560v-80h-80v480Zm160-560h160q0-33-23.5-56.5T480-800q-33 0-56.5 23.5T400-720ZM240-160v-480 480Z"
-              />
-            </svg>
+          <button class="header__button material-symbols-outlined">
+            shopping_bag
           </button>
-          <button class="header__button">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              height="24"
-              viewBox="0 -960 960 960"
-              width="24"
-            >
-              <path
-                d="M160-200v-80h80v-280q0-83 50-147.5T420-792v-28q0-25 17.5-42.5T480-880q25 0 42.5 17.5T540-820v28q80 20 130 84.5T720-560v280h80v80H160Zm320-300Zm0 420q-33 0-56.5-23.5T400-160h160q0 33-23.5 56.5T480-80ZM320-280h320v-280q0-66-47-113t-113-47q-66 0-113 47t-47 113v280Z"
-              />
-            </svg>
+          <button class="header__button material-symbols-outlined">
+            notifications
           </button>
-          <button class="header__button">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              height="24"
-              viewBox="0 -960 960 960"
-              width="24"
-            >
-              <path
-                d="M234-276q51-39 114-61.5T480-360q69 0 132 22.5T726-276q35-41 54.5-93T800-480q0-133-93.5-226.5T480-800q-133 0-226.5 93.5T160-480q0 59 19.5 111t54.5 93Zm246-164q-59 0-99.5-40.5T340-580q0-59 40.5-99.5T480-720q59 0 99.5 40.5T620-580q0 59-40.5 99.5T480-440Zm0 360q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Zm0-80q53 0 100-15.5t86-44.5q-39-29-86-44.5T480-280q-53 0-100 15.5T294-220q39 29 86 44.5T480-160Zm0-360q26 0 43-17t17-43q0-26-17-43t-43-17q-26 0-43 17t-17 43q0 26 17 43t43 17Zm0-60Zm0 360Z"
-              />
-            </svg>
+          <button class="header__button material-symbols-outlined">
+            account_circle
           </button>
         </div>
       </nav>
@@ -85,66 +58,11 @@
         </div>
     </main>
     <footer class="footer">
-      <div class="footer__top">
-        <div class="footer__lists">
-          <h6 class="footer__list-title">Colecciones</h6>
-          <ul class="footer__list-of-elements">
-            <li class="footer__list-item"><a href="">Blusas para dama</a></li>
-            <li class="footer__list-item"><a href="">Blusas para niña</a></li>
-            <li class="footer__list-item"><a href="">Pantalones</a></li>
-            <li class="footer__list-item"><a href="">Vestidos</a></li>
-            <li class="footer__list-item"><a href="">Conjuntos</a></li>
-          </ul>
-        </div>
-        <div class="footer__lists">
-          <h6 class="footer__list-title">Contacto</h6>
-          <ul class="footer__list-of-elements">
-            <li class="footer__list-item">
-              <a href="https://www.facebook.com/profile.php?id=100066625309972"
-                >Facebook</a
-              >
-            </li>
-            <li class="footer__list-item"><a href="">Messeger</a></li>
-            <li class="footer__list-item">
-              <a
-                href="https://instagram.com/tiendarosalinda?igshid=OGQ5ZDc2ODk2ZA=="
-                >Instagram</a
-              >
-            </li>
-            <li class="footer__list-item">
-              <a href="https://wa.me/573332417855">WhatsApp</a>
-            </li>
-            <li class="footer__list-item">
-              <a href="tiendarosalindaempresa@gmail.com">Correo</a>
-            </li>
-          </ul>
-        </div>
-        <div class="footer__newsletter">
-          <h6 class="footer__list-title">Boletin informativo</h6>
-          <p class="footer__newsletter-info">
-            Suscríbete para recibir las últimas noticias, actualizaciones e
-            información.
-          </p>
-          <form action="" class="footer__newsletter-form">
-            <input type="text" class="footer__input" />
-            <button type="submit" class="footer__button">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                height="24"
-                viewBox="0 -960 960 960"
-                width="24"
-              >
-                <path
-                  d="M120-160v-640l760 320-760 320Zm80-120 474-200-474-200v140l240 60-240 60v140Zm0 0v-400 400Z"
-                />
-              </svg>
-            </button>
-          </form>
-        </div>
-      </div>
+      <div class="footer__top"></div>
       <div class="footer__bottom">
         <p class="footer__name">Rosa Linda &copy; 2024</p>
       </div>
     </footer>
+    <script src="code/scripts/script.js"></script>
   </body>
 </html>
